# Change Log
All notable changes to this project will be documented in this file.

## [3.0.5] - 2017-03-02
# Added
- Implement GitHub API
- Git Host API allows to filter on pull request status
- reset and force_reset commands

## [3.0.4] - 2017-02-16
# Fixed
- Bert-E specifically handles the case where the destination of a PR is archived/deleted
# Added
- Provide the url to failed builds in pull requests

## [3.0.3] - 2017-02-15
# Fixed
- Filter on open pull requests only to avoid getting stuck in a loop
- Fixed conflict resolution instructions on non-pushed integration branches

## [3.0.2] - 2017-02-13
# Changed
- Bitbucket API HTTP calls were optimized to avoid full-scan (and throttling by Bitbucket)
- Made approval messages less verbose
# Added
- The abstract Git HOST API allows for filtering when listing pull requests
# Fixed
- BertE no longer pushes empty integration branches to the repository
- Add mechanism to hide BertE's credentials from error messages and logs

## [3.0.1] - 2017-02-07
# Fixed
- Some exceptions slipped through and killed the BertE worker thread in the server
- Tasks were set in reversed order on bitbucket

## [3.0.0] - 2017-02-06
# Changed
- dropped Python 2 support, in favor of Python 3.5+
- defined an abstract git_host API for Bitbucket and similar services
- major refactoring: the big bert_e.bert_e module was exploded in independent packages
- support for Bitbucket's STOPPED build status

## [2.0.10] - 2017-01-23
# Changed
- do not fail in case the internal API of tasks has changed at bitbucket
# Fixed
- fixed init message when there is no default review tasks for the project

## [2.0.9] - 2017-01-18
# Added
- customized review tasks auto-creation on init
# Fixed
- unstarted builds in queue show as NOTSTARTED rather than INPROGRESS
# Changed
- removed reference to Jira ticket types `EPIC` in documentation

## [2.0.8] - 2016-12-30
# Changed
- Bert-E is now provided as an installable package
- optimised templating for status page