@@ -5,7 +5,8 @@ All notable changes to this project will be documented in this file.
 # Added
 - Implement GitHub API
 - Git Host API allows to filter on pull request status
-- reset and force_reset commands
+- Reset and force_reset commands
+- Add explicit message when using a command with a wrong syntax
 
 ## [3.0.4] - 2017-02-16
 # Fixed
